syntax = "proto3";

package invoice;

// ==================== ENUMS ====================

enum InvoiceStatus {
  DRAFT = 0;
  VALIDATED = 1;
  PAID = 2;
  CANCELLED = 3;
  CREDIT_NOTE = 4;
}

// ==================== MESSAGES - Items ====================

message InvoiceItem {
  string id = 1;
  string description = 2;
  double quantity = 3;
  string unit = 4;
  double unitPriceHT = 5;
  double vatRate = 6;
  double discount = 7;
  double totalHT = 8;
  double totalTVA = 9;
  double totalTTC = 10;
}

message CreateInvoiceItem {
  string description = 1;
  double quantity = 2;
  string unit = 3;
  double unitPriceHT = 4;
  double vatRate = 5;
  double discount = 6;
}

// ==================== MESSAGES - Invoice ====================

message Invoice {
  string id = 1;
  string invoiceNumber = 2;
  InvoiceStatus status = 3;

  // Customer info
  string customerName = 4;
  string customerAddress = 5;
  string customerSiret = 6;
  string customerTvaNumber = 7;
  string customerEmail = 8;
  string customerPhone = 9;

  // Dates
  string issueDate = 10;
  string deliveryDate = 11;
  string dueDate = 12;

  // Amounts
  double totalHT = 13;
  double totalTVA = 14;
  double totalTTC = 15;

  // Payment terms
  int32 paymentTermsDays = 16;
  double latePaymentInterestRate = 17;
  double recoveryIndemnity = 18;

  // Optional fields
  string vatMention = 19;
  string notes = 20;

  // Items
  repeated InvoiceItem items = 21;

  // PDF info
  string pdfPath = 22;
  string pdfHash = 23;

  // Credit note info
  string originalInvoiceId = 24;

  // Audit fields
  string createdAt = 25;
  string updatedAt = 26;
  string validatedAt = 27;
  string paidAt = 28;
}

// ==================== REQUEST/RESPONSE MESSAGES ====================

message CreateInvoiceRequest {
  string customerName = 1;
  string customerAddress = 2;
  string customerSiret = 3;
  string customerTvaNumber = 4;
  string customerEmail = 5;
  string customerPhone = 6;

  string issueDate = 7;
  string deliveryDate = 8;
  string dueDate = 9;

  int32 paymentTermsDays = 10;
  double latePaymentInterestRate = 11;
  double recoveryIndemnity = 12;

  string vatMention = 13;
  string notes = 14;

  repeated CreateInvoiceItem items = 15;
}

message UpdateInvoiceRequest {
  string id = 1;
  string customerName = 2;
  string customerAddress = 3;
  string customerSiret = 4;
  string customerTvaNumber = 5;
  string customerEmail = 6;
  string customerPhone = 7;

  string issueDate = 8;
  string deliveryDate = 9;
  string dueDate = 10;

  int32 paymentTermsDays = 11;
  double latePaymentInterestRate = 12;
  double recoveryIndemnity = 13;

  string vatMention = 14;
  string notes = 15;

  repeated CreateInvoiceItem items = 16;
  InvoiceStatus status = 17;
}

message FindOneRequest {
  string id = 1;
}

message FindAllRequest {
  // Peut être étendu avec pagination, filtres, etc.
  int32 limit = 1;
  int32 offset = 2;
}

message FindAllResponse {
  repeated Invoice invoices = 1;
  int32 total = 2;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// Company branding info for PDF generation
message CompanyBranding {
  // Branding
  string logoBase64 = 1;          // Logo en base64
  string logoMimeType = 2;        // image/png, image/jpeg
  string primaryColor = 3;        // Couleur principale (#hex)
  string secondaryColor = 4;      // Couleur secondaire (#hex)

  // Company info
  string companyName = 5;
  string companyAddress = 6;
  string companyPhone = 7;
  string companyEmail = 8;
  string companySiret = 9;
  string companyTvaNumber = 10;
  string companyRcs = 11;
  string companyCapital = 12;

  // Bank details
  string iban = 13;
  string bic = 14;
  string bankName = 15;

  // Custom texts
  string headerText = 16;
  string footerText = 17;
  string legalMentions = 18;
  string paymentTerms = 19;

  // Settings
  string invoicePrefix = 20;
  bool showLogo = 21;
  string logoPosition = 22;       // left, center, right
}

message ValidateInvoiceRequest {
  string id = 1;
  CompanyBranding branding = 2;   // Optional branding info
}

message MarkAsPaidRequest {
  string id = 1;
}

message CreateCreditNoteRequest {
  string id = 1;
}

message DownloadPdfRequest {
  string id = 1;
}

message DownloadPdfResponse {
  bytes pdfData = 1;
  string fileName = 2;
  string invoiceNumber = 3;
}

message Empty {}

// ==================== SERVICE DEFINITION ====================

service InvoiceService {
  // CRUD operations
  rpc CreateInvoice (CreateInvoiceRequest) returns (Invoice);
  rpc FindAllInvoices (FindAllRequest) returns (FindAllResponse);
  rpc FindOneInvoice (FindOneRequest) returns (Invoice);
  rpc UpdateInvoice (UpdateInvoiceRequest) returns (Invoice);
  rpc DeleteInvoice (DeleteRequest) returns (DeleteResponse);

  // Business operations
  rpc ValidateInvoice (ValidateInvoiceRequest) returns (Invoice);
  rpc MarkInvoiceAsPaid (MarkAsPaidRequest) returns (Invoice);
  rpc CreateCreditNote (CreateCreditNoteRequest) returns (Invoice);
  rpc DownloadInvoicePdf (DownloadPdfRequest) returns (DownloadPdfResponse);
}
